--- a/GoodPlant/css/style.css
+++ b/GoodPlant/css/style.css
@@ -3,6 +3,16 @@
     padding: 0;
     box-sizing: border-box;
 }
+.imagenLogo{
+    width: 70px;
+    transition: all 1s;
+}
+.imagenLogo:hover {
+    -webkit-transform: rotateY(180deg);
+    -webkit-transform-style: preserve-3d;
+    transform: rotateY(180deg);
+    transform-style: preserve-3d;
+}
 .container-fluid{
     justify-content: space-around;
 }
