correcciones de la evaluacion

--- a/GoodPlant/css/style.css
+++ b/GoodPlant/css/style.css
@@ -26,6 +26,36 @@
         flex-direction: column;
     }
 }
+@media screen and (max-width: 600px) {
+    table {
+        width:100%;
+    }
+    thead {
+        display: none;
+    }
+    tr:nth-of-type(2n) {
+        background-color: inherit;
+    }
+    tr td:first-child {
+        background: #f0f0f0;
+        font-weight:bold;
+        font-size:1.3em;
+    }
+    tbody td {
+        display: block;
+        text-align:center;
+    }
+    tbody td:before {
+        content: attr(data-th);
+        display: block;
+        text-align:center;
+    }
+}
+@media only screen and (max-width: 600px) {
+    .mainItems {
+      grid-template-columns: auto;
+    }
+  }
 .nav-link{
     color: white;
 }
@@ -34,6 +64,13 @@
     transition: all 1s;
 }
 .nav-link:hover .fa{
+    transform: rotate(360deg);
+    font-size: 18px;
+}
+.nav-link .fa-brands{
+    transition: all 1s;
+}
+.nav-link:hover .fa-brands{
     transform: rotate(360deg);
     font-size: 18px;
 }
